# supportforge

./: .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  compose.yml  docker-compose.yml
backend/: .env.compose  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py
backend/app/agent/prompts/: agent.md  classify.md  escalate.md  respond.md  system.md
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  auth.py  health.py  router.py  tenants.py
backend/app/core/: __init__.py  config.py  context.py  exceptions.py  logging.py  security.py  tenant_scope.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 50d84d83ad0e_add_tenant_user_kb_doc_tables.py  (+4 more)
backend/app/integrations/: __init__.py
backend/app/models/: __init__.py  agent_run.py  audit_log.py  conversation.py  conversation_message.py  document.py  knowledge_base.py  refresh_token_session.py  tenant.py  ticket.py  user.py
backend/app/rag/: __init__.py
backend/app/repositories/: __init__.py  base.py  refresh_token_session_repo.py  tenant_repo.py  user_repo.py
backend/app/schemas/: __init__.py  auth.py  common.py  tenant.py
backend/app/services/: __init__.py  auth_service.py  tenant_service.py
backend/app/tasks/: __init__.py
backend/app/utils/: __init__.py
backend/scripts/: __init__.py  init_demo_data.py
backend/tests/: test_api_contract.py  test_auth.py  test_context.py  test_tenant_scope.py
docs/: README.md
(+42 files in other folders)
