[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "孙榕鸿"}
]
license = "MIT"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "langgraph (>=1.2.0,<2.0.0)",
    "openai (>=2.37.0,<3.0.0)",
    "qdrant-client (>=1.18.0,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "greenlet (>=3.5.1,<4.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["app"]
exclude = [
    "app/db/migrations/versions",
    "app/db/migrations/env.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 88
extend-exclude = '''
/(
    app/db/migrations/versions
    | app/db/migrations/env.py
)/
'''

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.13,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)"
]
